more sonar issues